static/css/style.css
/* ... */
.main .section .carousel-container .dots .dot:focus, .main .section .carousel-container .dots .dot:hover {
  background-color: #717171;
}
.main .section .carousel-container .item .text a{
  color: #FFF;
  font-size: 14px;
}

.whatsapp-btn{
  position: fixed;
  bottom: 20px;
  right: 10px;
  cursor: pointer;
}
.whatsapp-btn .svg-inline--fa{
  font-size: 20px;
  box-shadow: 0.5px 0.5px 0.5px #FFF;
  background:#128c7e;
  color: #FFF;
  padding: 10px 11.5px;
  border-radius: 50px;
}
.work-samples .title{
  color: #FFF;
  font-size: 24px;
  font-family: 'Balsamiq Sans',cursive;
}
/* mobile version */
.abhishek-div .abhishek-mobile-image{
    display: none;
    padding: 200px;
    background: url(../../images/abhishek_mobile_min.png);
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 50%;
    border: 5px solid #FFF;
    margin: 100px;
}

.navigation-bar{
  position: fixed;
  bottom: 0;
  width: 100%;
  display: none;
}
.navigation-bar .nav-row{
  background: #FFF;
  width: 100%;
  text-align: center;
  padding: 10px 0;
}
.navigation-bar .nav-column{
  display: inline-block;
  width: 19%;
}
.navigation-bar .svg-inline--fa{
  font-size: 20px;
}
/* mobile version */
@media only screen and (max-height: 800px){
  .abhishek-div .abhishek-mobile-image{
    padding: 200px;
    margin: 50px;
  }
}
@media only screen and (min-height: 800px){
  .about-text{
    padding-top:20%;
  }
  .resume-side-bar .text-block{
    padding-top: 20%;
  }
  .resume-json .resume-background{
    padding-top:10%;
  }
}
@media only screen and (max-width: 1150px){
  .abhishek-div .abhishek-image{
    display: none;
  }
  .abhishek-div .abhishek-mobile-image{
    display: inline-block;
  }
  .hero-text {
    padding-top: 200px;
    font-size: 65px;
  }
}
@media only screen and (max-width: 992px){
  .abhishek-div .abhishek-mobile-image{
    padding: 150px;
  }
  .hero-text{
    padding-top: 100px;
  }
  .about .text-block{
    font-size: 72px;
  }
  .circle-container > * {
    left: 25%;
  }
}

@media only screen and (max-width: 768px){
  .navigation-bar{
    display: block;
  }
  .scroll-down-container{
    display: none;
  }
  .whatsapp-btn{
    display: none;
  }
  .slide .side-bar{
    bottom:0;
    top:unset;
    left:unset;
    width: 100%;
    height: 40vh;
  }
  .hero-text{
    padding-top: 20px;
    font-size: 32px;
  }
  .logo-name{
    position: absolute;
    left: 0;
    top: 0;
    padding: 0;
    font-size: 20px;
  }
  .abhishek-div .abhishek-mobile-image{
    padding:75px;
  }
  .about .tools, .about .text-block{
    display: none;
  }
  .about-text h2, .about-text h3{
    font-size: 18px;
  }
  .about-text{
    text-align: center;
    margin:0;
    padding-top:50px;
  }
  .about-text h2{
    margin-top:0;
  }
  .about-text .border-anim::after{
    left:45%;
    margin-bottom: 20px;
  }
  .resume-side-bar {
    height: 30px;
    width: 100%;
    top: 0;
  }
  .resume-side-bar div{
    font-size: 30px;
    display: inline;
  }
  .resume-json .resume-background{
    margin:0;
  }
  .resume-json .collapse{
    margin-left: 10px;
  }
  .footer-main{
    display: none;
  }
  .panel-box{
    width: 100%;
  }
  .submit-button{
    margin-bottom: 65px;
  }
}
@media only screen and (max-height: 550px){
  .about-text{
    padding-top:10px;
  }
  .contact-button{
    margin-top:20px;
  }
}

@keyframes fade {
  from {
    opacity: 0.8;
  }
  to {
    opacity: 1;
  }
}
@keyframes down-enter {
  0% { clip-path: inset(0 0 100% 0); }
  100% { clip-path: inset(0); }
}

@keyframes down-leave {
  0% { clip-path: inset(0); }
  100% { clip-path: inset(100% 0 0 0); }
}

@keyframes cursorBlink{
  49% { background-color: #111; }
  50% { background-color: transparent;}
  99% { background-color: transparent; }
}

@keyframes move {
  25% {
    opacity: 1;

  }
  33% {
    opacity: 1;
    transform: translateY(30px);
  }
  67% {
    opacity: 1;
    transform: translateY(40px);
  }
  100% {
    opacity: 0;
    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
  }
}


/* modal */
.modal-window {
  position: fixed;
  background-color: rgba(255, 255, 255, 0.25);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 999;
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}
.modal-window:target {
  visibility: visible;
  opacity: 1;
  pointer-events: auto;
}
.modal-window > div {
  width: 400px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  padding: 2em;
  background: #ffffff;
}
.modal-window header {
  font-weight: bold;
}
.modal-window h1 {
  font-size: 150%;
  margin: 0 0 15px;
}

.modal-close {
  color: #aaa;
  line-height: 50px;
  font-size: 80%;
  position: absolute;
  right: 0;
  text-align: center;
  top: 0;
  width: 70px;
  text-decoration: none;
}
.modal-close:hover {
  color: black;
}
a {
  color: inherit;
}

.container {
  display: grid;
  -webkit-box-pack: center;
          justify-content: center;
  -webkit-box-align: center;
          align-items: center;
  height: 100vh;
}

.modal-window div:not(:last-of-type) {
  margin-bottom: 15px;
}

small {
  color: #aaa;
}

.btn {
  background-color: #fff;
  padding: 1em 1.5em;
  border-radius: 3px;
  text-decoration: none;
}
.btn i {
  padding-right: 0.3em;
}
/* modal */
@media only screen and (max-width: 500px){
  .modal-window > div{
    width: 200px;
  }
}

